# quasar-utils

./: .gitignore  README.md  pyproject.toml  setup.py
src/quasar_utils/: binning.py  continuum_fit_result.py  convolution.py  interpolation.py  naming.py  raster.py  wrappers.py
src/quasar_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quasar_utils/absorption/: __init__.py  absorption.py  smoothing.py  utils.py
src/quasar_utils/binning/: __init__.py  alpha_matrix_elements.pyx  binning.py
src/quasar_utils/decorators/: __init__.py  apply_info_to_method.py  lru_cache.py  validate_call.py  validated_apply_info_to_method.py  validated_lru_cache.py
src/quasar_utils/dereddening/: __init__.py  dustmaps.py
src/quasar_utils/fitting/: __init__.py  baseclasses.py  dogbox.py  lm.py  trf.py
src/quasar_utils/interpolation/: __init__.py  interp_matrix_elements.pyx  interpolation.py
src/quasar_utils/loading/: __init__.py  ascii_loader.py  fits_loader.py  loader.py  paqs_loader.py  sdss_loader.py
src/quasar_utils/pipeline/: __init__.py  backupfile.py  input_dir.py  linelist.py  output_dir.py  sub_dir.py  user_input.py
src/quasar_utils/setup/: __init__.py  absorption.py  (+10 more)
tests/binning/: test_alpha_matrix_elements.py
tests/dereddening/: test_dereddening.py  test_dust_extinction.py  test_dustmaps.py
tests/interpolation/: benchmark_cython_vs_numba.py  test_cython_vs_numba.py
tests/pipeline/: test_input_dir_pickle.py  test_output_dir_pickle.py  test_sub_dir_pickle.py
tests/setup/: test_can_import_all.py  test_info.py  test_json_loading.py
(+20 files in other folders)
