[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.16",
    "astropy>=7.0",
    "pydantic>=2.12",
    "numba",
    "quasar-typing",
]

[project.urls]
Homepage = "https://github.com/liamdeburca/quasar-utils"
Repository = "https://github.com/liamdeburca/quasar-utils.git"
"Bug Tracker" = "https://github.com/liamdeburca/quasar-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]